# ml_algorithms_in_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  mod.rs  requirements.txt
src/: lib.rs
src/algo/: mod.rs
src/algo/ViT/: mhsa.rs  mlp.rs  mod.rs  module.rs  transformer_block.rs
src/algo/vision_transformer/: mhsa.rs  mlp.rs  mod.rs  transformer_block.rs  vit.rs
src/benchmarks/python/: vision_transformer.py
src/benchmarks/rust/: vision_transformer.rs
src/datasets/: cifar10.rs  mod.rs  prepare_cifar10.py
