[package]
name = "ml_algorithms_in_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = "0.18.0"
ndarray = "0.15"
ndarray-npy = "0.9.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "algo"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/benchmarks/rust/vision_transformer.rs"